<resources>

    <string name="app_name">LunchList</string>
    <string name="hello_world">Hello world!</string>
    <string name="addr_tag">Address: </string><string name="menu_settings">Settings</string>
    <string name="title_main">LunchList</string>
    <string name="name_tag">Name: </string>
    
    <string name="save_button_title">Save</string>
    <string name="type_tag">Type: </string>
    <string name="sit_down">Sit-Down</string>
    <string name="take_out">Take-Out</string>
    <string name="delivery">Delivery</string>
    <string name="notes_tag">Notes</string>
    <string name="new_restaurant_prompt">Click the MENU button to add a restaurant!</string>
    <string name="sort_title">Sort Order</string>
    <string name="sort_summary">Choose the order the list uses</string>
    <string name="sort_dialog_title">Choose a sort order</string>
    <string name="feed_tag">Feed URL</string>
    <string name="location_tag">Location: </string>
    <string name="location_not_set">(not set)</string>
    <string name="time_title">Lunch Alarm Time</string>
    <string name="default_time">12:00</string>
    <string name="time_summary">Set your desired time for the lunch alarm</string>
    <string name="alarm_title">Sound a Lunch Alarm</string>
    <string name="alarm_summary">Check if you want to know when it is time for lunch</string>
    <string name="time_notice">It\'s time for lunch!</string>
    <string name="subtle_alarm_title">Use a Notification</string>
    <string name="subtle_alarm_summary">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="time_notice_extended">It\'s time for lunch! Aren\'t you hungry?</string>
    <string name="empty_db">No restaurants!</string>
    <string name="add_title">Add</string>
    <string name="settings_title">Settings</string>

</resources>