<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="sort_order"
        android:title="@string/sort_title"
        android:summary="@string/sort_summary"
        android:entries="@array/sort_names"
        android:entryValues="@array/sort_clauses"
        android:dialogTitle="@string/sort_dialog_title" />
    <CheckBoxPreference 
        android:key="@string/alarm_key"
        android:title="@string/alarm_title"
        android:summary="@string/alarm_summary" />
    <csci498.csmyth.lunchlist.TimePreference
        android:key="@string/alarm_time_key"
        android:title="@string/time_title"
        android:defaultValue="@string/default_time"
        android:summary="@string/time_summary"
        android:dependency="@string/alarm_key" />
</PreferenceScreen>