<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
                
	<TableLayout android:id="@+id/details"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1"
		android:shrinkColumns="1" >
		
		<TableRow>
			<TextView android:text="@string/name_tag" />
		    <EditText android:id="@+id/name"
		    	android:inputType="textCapWords" />
		</TableRow>
		            
		<TableRow>
			<TextView android:text="@string/addr_tag" />
		    <EditText android:id="@+id/addr"
				android:inputType="textPostalAddress" />	
	    </TableRow>
	    			
		<TableRow>
			<TextView android:text="@string/type_tag" />
		    <RadioGroup android:id="@+id/types" >
		                    
		        <RadioButton android:id="@+id/take_out"
					android:checked="true"
		            android:text="@string/take_out" />
		                    
				<RadioButton android:id="@+id/sit_down"
		        	android:text="@string/sit_down" />
		                    
				<RadioButton android:id="@+id/delivery"
		        	android:text="@string/delivery" />
				
				</RadioGroup>
		</TableRow>
					
		<TableRow>
			<TextView android:text="@string/notes_tag" />
		   	<EditText android:id="@+id/notes"
				android:gravity="top"
		        android:lines="2"
		        android:scrollHorizontally="false"
		        android:maxLines="2"
				android:inputType="textMultiLine" />
		</TableRow>
						
		<Button android:id="@+id/save"
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/save_button_title" />
			            
	</TableLayout>
</ScrollView>
