<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" > -->

    <TabHost xmlns:android="http://schemas.android.com/apk/res/android" 
        android:id="@android:id/tabhost"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" >
    
    	<LinearLayout
        	android:layout_width="match_parent"
	        android:layout_height="match_parent" >
    	
			<TabWidget android:id="@android:id/tabs"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" />
    		
    		<TableLayout android:id="@+id/details"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:stretchColumns="1"
	        	android:shrinkColumns="1"
	        	android:paddingTop="4dip" >
	        	
	            <TableRow>
	                <TextView android:text="@string/name_tag" />
	                <EditText android:id="@+id/name"
	                    android:inputType="textCapWords" />
	            </TableRow>
	            
	            <TableRow>
	                <TextView android:text="@string/addr_tag" />
	                <AutoCompleteTextView android:id="@+id/addr"
	                    android:inputType="textPostalAddress" />	
    			</TableRow>
    			
	            <TableRow>
	                <TextView android:text="@string/type_tag" />
	                <RadioGroup android:id="@+id/types"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content" >
	                    
	                    <RadioButton android:id="@+id/take_out"
	                        android:checked="true"
	                        android:text="@string/take_out" />
	                    
	                    <RadioButton android:id="@+id/sit_down"
	                        android:text="@string/sit_down" />
	                    
	                    <RadioButton android:id="@+id/delivery"
	                        android:text="@string/delivery" />
	                </RadioGroup>
				</TableRow>
					
	            <Button android:id="@+id/save"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/save_button_title" />
		            
			</TableLayout>
			
    	</LinearLayout>
    		
	</TabHost>

<!-- </ScrollView> -->